--- a/forexglobal/sass/style.scss
+++ b/forexglobal/sass/style.scss
@@ -28,3 +28,4 @@
 @import 'blocks/inner/kids';
 @import 'blocks/inner/careers';
 @import 'blocks/inner/announcements';
+@import 'blocks/inner/contact';
