--- a/forexglobal/sass/blocks/main/nav.scss
+++ b/forexglobal/sass/blocks/main/nav.scss
@@ -33,6 +33,7 @@
     font-size: 18px;
     font-weight: 300;
     text-decoration: none;
+    cursor: pointer;
     
     &::after {
       content: '';
@@ -72,17 +73,19 @@
 .nav__wrapper {
   position: absolute;
   // display: none;
-  top: 160px;
+  // top: 160px;
   left: 0;
   width: 100%;
+  border-top: 1px solid #2f2861;
   background: rgba(47, 40, 97, 0.9);
+  transition: 0.5s;
   
   &--closed {
-    display: none;
+    top: -700px;
   }
   
   &--opened {
-    display: block;
+    top: 157px;
   }
 }
 
@@ -170,6 +173,19 @@
     flex-wrap: wrap;
   }
   
+  .nav__wrapper {
+    // padding: 0 15px;
+    
+    &--opened {
+      top: 136px;
+    }
+  }
+  
+  .nav__sub {
+    width: 95%;
+    // padding: 30px 0;
+  }
+  
   .nav__list {
     margin: auto;
   }
@@ -201,5 +217,11 @@
         margin: 0;
       }
     }
+  }
+  
+  .nav__sub {
+    flex-direction: column;
+    width: 100%;
+    padding: 0;
   }
 }
