--- a/forexglobal/sass/blocks/main/nav.scss
+++ b/forexglobal/sass/blocks/main/nav.scss
@@ -211,10 +211,18 @@
     width: auto;
     
     li {
-      margin: 0 0 20px 0;
+      margin: 0 0 10px 0;
       
       &:last-child {
         margin: 0;
+      }
+      
+      a {
+        font-size: 14px;
+        
+        &:after {
+          top: 7px;
+        }
       }
     }
   }
@@ -223,5 +231,9 @@
     flex-direction: column;
     width: 100%;
     padding: 0;
+    
+    b {
+      font-size: 18px;
+    }
   }
 }
