--- a/forexglobal/sass/style.scss
+++ b/forexglobal/sass/style.scss
@@ -29,3 +29,4 @@
 @import 'blocks/inner/careers';
 @import 'blocks/inner/announcements';
 @import 'blocks/inner/contact';
+@import 'blocks/inner/glossary';
