--- a/forexglobal/css/style.css
+++ b/forexglobal/css/style.css
@@ -2406,3 +2406,90 @@ body {
   .contact__sub {
     width: 300px;
     margin: 20px 0 0 0; } }
+
+.glossary {
+  padding: 150px 0 70px 0; }
+  .glossary hr {
+    height: 1px;
+    margin: 50px 0;
+    border: none;
+    background: #b8b8b8; }
+
+.glossary__name {
+  margin: 0 0 50px 0;
+  color: #2f2861;
+  font-size: 60px;
+  font-weight: 500;
+  text-align: center; }
+
+.glossary__button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  height: 60px;
+  margin: 10px 0;
+  padding: 0;
+  list-style: none; }
+  .glossary__button li button {
+    color: #2f2861;
+    font-size: 30px;
+    font-weight: 500;
+    font-family: inherit;
+    border: none;
+    cursor: pointer;
+    -webkit-transition: 0.3s;
+    transition: 0.3s; }
+    .glossary__button li button:hover {
+      color: #6420ff;
+      font-size: 40px; }
+
+.glossary__content details {
+  padding: 15px;
+  border-bottom: 1px solid #6420ff;
+  -webkit-transition: 1s;
+  transition: 1s; }
+  .glossary__content details summary {
+    position: relative;
+    color: #2f2861;
+    font-size: 18px;
+    font-weight: 500;
+    outline: none;
+    cursor: pointer; }
+    .glossary__content details summary::-webkit-details-marker {
+      display: none; }
+    .glossary__content details summary:after {
+      content: '';
+      position: absolute;
+      top: 7px;
+      right: 0;
+      width: 15px;
+      height: 10px;
+      background: url("../img/details-marker.svg") no-repeat center;
+      -webkit-transition: 0.3s;
+      transition: 0.3s; }
+  .glossary__content details[open] summary:after {
+    -webkit-transform: rotate(180deg);
+    transform: rotate(180deg); }
+  .glossary__content details p {
+    color: #2f2861;
+    font-size: 18px;
+    font-weight: 300; }
+
+@media screen and (max-width: 1200px) {
+  .glossary {
+    padding: 200px 0 0 0; }
+  .glossary__text {
+    padding: 0 15px; } }
+
+@media screen and (max-width: 768px) {
+  .glossary {
+    padding: 100px 0 0 0; }
+  .glossary__name {
+    margin: 0 0 20px 0;
+    font-size: 40px; } }
