--- a/forexglobal/sass/blocks/inner/account-types.scss
+++ b/forexglobal/sass/blocks/inner/account-types.scss
@@ -1,22 +1,3 @@
-.account-types {
-  padding: 150px 0 70px 0;
-}
-
-.account-types__name {
-  margin: 0 0 50px 0;
-  color: $sc;
-  font-size: 60px;
-  font-weight: 500;
-  text-align: center;
-}
-
-.account-types__text {
-  margin: 0 0 70px 0;
-  color: $sc;
-  font-size: 18px;
-  font-weight: 300;
-}
-
 .account-types__flex {
   display: flex;
   justify-content: space-between;
@@ -58,9 +39,9 @@
   hr {
     width: 30px;
     height: 1px;
-    margin: 20px auto;
+    margin: 20px auto !important;
     border: none;
-    background: $mc;
+    background: $mc !important;
   }
   
   ul {
