--- a/forexglobal/sass/blocks/inner/announcements.scss
+++ b/forexglobal/sass/blocks/inner/announcements.scss
@@ -1,22 +1,3 @@
-.announcements {
-  padding: 150px 0 0 0;
-  
-  hr {
-    height: 1px;
-    margin: 50px 0;
-    border: none;
-    background: #b8b8b8;
-  }
-}
-
-.announcements__name {
-  margin: 0 0 50px 0;
-  color: $sc;
-  font-size: 60px;
-  font-weight: 500;
-  text-align: center;
-}
-
 .announcements__list {
   // margin: 0;
   padding: 0;
@@ -40,23 +21,6 @@
   }
 }
 
-@media screen and ($tablet-widths) {
-  .announcements {
-    padding: 200px 0 0 0;
-  }
-  
-  .announcements__text {
-    padding: 0 15px;
-  }
-}
+@media screen and ($tablet-widths) {}
 
-@media screen and ($mobile-widths) {
-  .announcements {
-    padding: 100px 0 0 0;
-  }
-  
-  .announcements__name {
-    margin: 0 0 20px 0;
-    font-size: 40px;
-  }
-}
+@media screen and ($mobile-widths) {}
