--- a/forexglobal/sass/blocks/inner/tab.scss
+++ b/forexglobal/sass/blocks/inner/tab.scss
@@ -3,6 +3,7 @@
   justify-content: space-between;
   // border: 1px solid #ccc;
   // background: $sc;
+  margin: 30px 0 0 0;
   overflow: hidden;
 }
 
