--- a/forexglobal/css/style.css
+++ b/forexglobal/css/style.css
@@ -2104,9 +2104,9 @@ body {
   background-size: 100px; }
 
 .inner__content h2 {
-  margin: 0;
+  margin: 30px 0;
   padding: 0 15px;
-  color: #2f2861;
+  color: #6420ff;
   font-size: 30px;
   font-weight: 500; }
 
@@ -2139,7 +2139,7 @@ body {
     transform: rotate(180deg); }
   .inner__content details p {
     color: #2f2861;
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 300; }
 
 @media screen and (max-width: 1200px) {
