--- a/forexglobal/sass/blocks/inner/inner.scss
+++ b/forexglobal/sass/blocks/inner/inner.scss
@@ -342,9 +342,9 @@
 .inner__content {
   
   h2 {
-    margin: 0;
+    margin: 30px 0;
     padding: 0 15px;
-    color: $sc;
+    color: #6420ff;
     font-size: 30px;
     font-weight: 500;
   }
@@ -385,7 +385,7 @@
     
     p {
       color: $sc;
-      font-size: 18px;
+      font-size: 16px;
       font-weight: 300;
     }
   }
