--- a/forexglobal/sass/blocks/inner/glossary.scss
+++ b/forexglobal/sass/blocks/inner/glossary.scss
@@ -15,6 +15,7 @@
       font-weight: 500;
       font-family: inherit;
       border: none;
+      background: transparent;
       cursor: pointer;
       transition: 0.3s;
       
