--- a/forexglobal/css/style.css
+++ b/forexglobal/css/style.css
@@ -2138,7 +2138,7 @@ body {
     -webkit-transform: rotate(180deg);
     transform: rotate(180deg); }
   .inner__content details p {
-    color: #2f2861;
+    color: #6420ff;
     font-size: 16px;
     font-weight: 300; }
 
@@ -2171,7 +2171,7 @@ body {
 
 @media screen and (max-width: 768px) {
   .inner {
-    padding: 100px 0 0 0; }
+    padding: 100px 0 50px 0; }
   .inner__name {
     margin: 0 0 20px 0;
     font-size: 40px; }
@@ -2210,4 +2210,12 @@ body {
   .inner__real {
     margin: 0; }
   .inner__demo {
-    margin: 30px 0 0 0; } }
+    margin: 30px 0 0 0; }
+  .inner__content {
+    padding: 0 15px; }
+    .inner__content h2 {
+      text-align: center; }
+    .inner__content details summary {
+      padding: 0 15px 0 0; }
+    .inner__content p {
+      margin: 16px 0 0 0; } }
