--- a/forexglobal/css/style.css
+++ b/forexglobal/css/style.css
@@ -1868,6 +1868,8 @@ body {
     transition: 0.3s; }
     .inner__text a:hover {
       color: #fac93e; }
+  .inner__text--mobile {
+    width: 500px; }
 
 .inner__img {
   margin: 70px 0 0 0;
@@ -1906,6 +1908,10 @@ body {
     align-items: center; }
   .inner__flex--types {
     margin: 70px 0; }
+  .inner__flex--mobile {
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center; }
   .inner__flex:first-child {
     padding: 40px 0 0 0; }
 
@@ -2017,6 +2023,12 @@ body {
     background-size: 471px; }
   .inner__mockup--desktop {
     background: url("../img/desktop-mockup.png") no-repeat center;
+    background-size: 471px; }
+  .inner__mockup--mobile-1 {
+    background: url("../img/mobile-mockup-1.png") no-repeat center;
+    background-size: 471px; }
+  .inner__mockup--mobile-2 {
+    background: url("../img/mobile-mockup-2.png") no-repeat center;
     background-size: 471px; }
 
 .inner__list {
@@ -2186,6 +2198,8 @@ body {
   .inner__icon {
     width: 250px;
     height: 250px; }
+  .inner__text--mobile {
+    width: auto; }
   .inner__flex {
     -webkit-box-pack: center;
     -ms-flex-pack: center;
@@ -2198,6 +2212,11 @@ body {
     .inner__flex--down {
       width: auto;
       margin: 0; }
+    .inner__flex--mobile {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column; }
     .inner__flex:first-child {
       padding: 220px 0 0 0; }
   .inner__mockup {
