--- a/forexglobal/css/style.css
+++ b/forexglobal/css/style.css
@@ -2243,3 +2243,104 @@ body {
       padding: 0 15px 0 0; }
     .inner__content p {
       margin: 16px 0 0 0; } }
+
+.table {
+  width: 100%;
+  text-align: center;
+  border-collapse: collapse; }
+
+.table__title {
+  height: 50px;
+  color: #fff;
+  font-size: 16px;
+  font-weight: 500;
+  background: #6420ff; }
+
+.table__row {
+  height: 80px;
+  color: #2f2861;
+  font-weight: 300;
+  border-bottom: 1px solid #6420ff; }
+
+.table__logo--visa {
+  background: url("../img/table-visa.png") no-repeat center; }
+
+.table__logo--mc {
+  background: url("../img/table-mc.png") no-repeat center; }
+
+.table__logo--bank {
+  background: url("../img/table-bank.png") no-repeat center; }
+
+.table__logo--paypal {
+  background: url("../img/table-paypal.png") no-repeat center; }
+
+.table__logo--neteller {
+  background: url("../img/table-neteller.png") no-repeat center; }
+
+.table__logo--skrill {
+  background: url("../img/table-skrill.png") no-repeat center; }
+
+.table__logo--ecopayz {
+  background: url("../img/table-ecopayz.png") no-repeat center; }
+
+.table__logo--intercash {
+  background: url("../img/table-intercash.png") no-repeat center; }
+
+.table__logo--fast {
+  background: url("../img/table-fast.png") no-repeat center; }
+
+.table__logo--paysafe {
+  background: url("../img/table-paysafe.png") no-repeat center; }
+
+.table__logo--safety {
+  background: url("../img/table-safety.png") no-repeat center; }
+
+.table__logo--trust {
+  background: url("../img/table-trust.png") no-repeat center; }
+
+.table__logo--cash {
+  background: url("../img/table-cash.png") no-repeat center; }
+
+.table__logo--ideal {
+  background: url("../img/table-ideal.png") no-repeat center; }
+
+.table__logo--trustly {
+  background: url("../img/table-trustly.png") no-repeat center; }
+
+.table__logo--neosurf {
+  background: url("../img/table-neosurf.png") no-repeat center; }
+
+.table__logo--ekonto {
+  background: url("../img/table-ekonto.png") no-repeat center; }
+
+.table__logo--ticket {
+  background: url("../img/table-ticket.png") no-repeat center; }
+
+.table__logo--giro {
+  background: url("../img/table-giro.png") no-repeat center; }
+
+.table__logo--sofort {
+  background: url("../img/table-sofort.png") no-repeat center; }
+
+.table__logo--przelewy {
+  background: url("../img/table-przelewy.png") no-repeat center; }
+
+.table__logo--qiwi {
+  background: url("../img/table-qiwi.png") no-repeat center; }
+
+.table__logo--yandex {
+  background: url("../img/table-yandex.png") no-repeat center; }
+
+.table__logo--wm {
+  background: url("../img/table-wm.png") no-repeat center; }
+
+.table__logo--moneta {
+  background: url("../img/table-moneta.png") no-repeat center; }
+
+@media screen and (max-width: 768px) {
+  .table__title {
+    font-size: 10px; }
+  .table__row {
+    font-size: 10px; }
+  .table__logo {
+    background-size: 40px; } }
