--- a/forexglobal/sass/blocks/inner/inner.scss
+++ b/forexglobal/sass/blocks/inner/inner.scss
@@ -49,6 +49,29 @@
   &--mobile {
     width: 500px;
   }
+  
+  &--cysec {
+    margin: 0 0 40px 0;
+    padding: 50px 20px;
+    border: 1px solid #6420ff;
+    border-radius: 3px;
+    
+    h2 {
+      margin: 0 0 50px 0;
+      color: $mc;
+      font-size: 50px;
+      font-weight: 500;
+      text-align: center;
+    }
+    
+    b {
+      padding: 0;
+    }
+    
+    ul, ol {
+      margin: 10px 0 20px 0;
+    }
+  }
 }
 
 // WebTrader
