--- a/forexglobal/sass/blocks/inner/inner.scss
+++ b/forexglobal/sass/blocks/inner/inner.scss
@@ -517,6 +517,19 @@
     &--mobile {
       width: auto;
     }
+    
+    &--cysec {
+      padding: 20px 15px;
+      
+      h2 {
+        margin: 0 0 30px 0;
+        font-size: 30px;
+      }
+      
+      &:last-child {
+        margin: 0;
+      }
+    }
   }
   
   .inner__flex {
