--- a/forexglobal/css/style.css
+++ b/forexglobal/css/style.css
@@ -581,6 +581,7 @@ body {
     font-size: 30px;
     font-weight: 500; }
   .nav__sub a {
+    font-size: 16px;
     -webkit-transition: 0.3s;
     transition: 0.3s; }
     .nav__sub a:hover {
