--- a/forexglobal/css/style.css
+++ b/forexglobal/css/style.css
@@ -373,7 +373,7 @@ body {
     width: 100%;
     margin: auto;
     padding: 18px 0; }
-  .header .nav__wrapper--opened {
+  .header--scroll .nav__wrapper--opened {
     top: 134px; }
   .header__container {
     width: 100%; } }
@@ -630,8 +630,6 @@ body {
   .nav {
     -ms-flex-wrap: wrap;
     flex-wrap: wrap; }
-  .nav__wrapper--opened {
-    top: 136px; }
   .nav__sub {
     width: 95%; }
   .nav__list {
@@ -2252,6 +2250,12 @@ body {
       -webkit-box-direction: normal;
       -ms-flex-direction: column;
       flex-direction: column; }
+    .inner__flex--types {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column;
+      margin: 70px 0 40px 0; }
     .inner__flex:first-child {
       padding: 220px 0 0 0; }
   .inner__mockup {
@@ -2266,6 +2270,10 @@ body {
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
     flex-direction: column; }
+    .inner__links--careers {
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center; }
   .inner__real {
     margin: 0; }
   .inner__demo {
