--- a/forexglobal/sass/blocks/inner/inner.scss
+++ b/forexglobal/sass/blocks/inner/inner.scss
@@ -556,6 +556,11 @@
       flex-direction: column;
     }
     
+    &--types {
+      flex-direction: column;
+      margin: 70px 0 40px 0;
+    }
+    
     &:first-child {
       padding: 220px 0 0 0;
     }
@@ -574,6 +579,10 @@
   
   .inner__links {
     flex-direction: column;
+    
+    &--careers {
+      align-items: center;
+    }
   }
   
   .inner__real {
