--- a/forexglobal/sass/blocks/main/tabs.scss
+++ b/forexglobal/sass/blocks/main/tabs.scss
@@ -21,9 +21,10 @@
       font-weight: 500;
       font-family: inherit;
       border: none;
+      border-bottom: 2px solid transparent;
       background: #fff;
       outline: none;
-      transition: 0.1s;
+      transition: 0.3s;
       cursor: pointer;
     }
   }
