--- a/forexglobal/css/style.css
+++ b/forexglobal/css/style.css
@@ -124,7 +124,9 @@ body {
     font-family: inherit;
     border: none;
     border-radius: 3px;
-    background: #fac93e; }
+    background: #fac93e;
+    -webkit-transition: 0.3s linear;
+    transition: 0.3s linear; }
     .title__form button::after {
       content: 'Trading involves risk of loss';
       position: absolute;
@@ -133,6 +135,10 @@ body {
       width: inherit;
       color: #fac93e;
       font-size: 10px; }
+    .title__form button:hover {
+      -webkit-box-shadow: 0px 3px 7px 0px rgba(174, 165, 255, 0.35);
+      box-shadow: 0px 3px 7px 0px rgba(174, 165, 255, 0.35);
+      background: #ffd800; }
 
 .title__down {
   position: relative;
@@ -218,6 +224,8 @@ body {
       width: 100%; }
       .header--scroll .nav__wrapper--opened {
         top: 76px; }
+    .header--scroll .nav__list a {
+      padding: 0 0 26px 0; }
   .header--inner {
     width: 100%; }
   .header--menu {
@@ -373,6 +381,8 @@ body {
     width: 100%;
     margin: auto;
     padding: 18px 0; }
+  .header--scroll .nav__list a {
+    padding: 0 0 17px 0; }
   .header--scroll .nav__wrapper--opened {
     top: 134px; }
   .header__container {
@@ -509,11 +519,14 @@ body {
     background: none; }
   .nav__list a {
     position: relative;
+    padding: 0 0 27px 0;
     color: #fac93e;
     font-size: 18px;
     font-weight: 300;
     text-decoration: none;
-    cursor: pointer; }
+    cursor: pointer;
+    -webkit-transition: 0.3s linear;
+    transition: 0.3s linear; }
     .nav__list a::after {
       content: '';
       position: absolute;
@@ -553,7 +566,7 @@ body {
   position: absolute;
   left: 0;
   width: 100%;
-  border-top: 1px solid #2f2861;
+  border-top: 2px solid #2f2861;
   background: rgba(47, 40, 97, 0.9);
   -webkit-transition: 0.5s;
   transition: 0.5s; }
@@ -592,8 +605,10 @@ body {
     opacity: 1;
     clip: auto; }
 
-.nav__link--active {
-  border-bottom: 1px solid red; }
+.nav__link {
+  border-bottom: 1px solid transparent; }
+  .nav__link--active {
+    border-bottom: 1px solid #fac93e; }
 
 .nav__search {
   position: relative;
@@ -710,7 +725,9 @@ body {
   text-align: center;
   text-decoration: none;
   border-radius: 3px;
-  background: #fac93e; }
+  background: #fac93e;
+  -webkit-transition: 0.3s;
+  transition: 0.3s; }
   .welcome__button::after {
     content: 'Trading involves risk of loss';
     position: absolute;
@@ -719,6 +736,8 @@ body {
     width: inherit;
     color: #2f2861;
     font-size: 10px; }
+  .welcome__button:hover {
+    background: #ffd800; }
 
 @media screen and (max-width: 1200px) {
   .welcome__flex {
@@ -924,10 +943,11 @@ body {
     font-weight: 500;
     font-family: inherit;
     border: none;
+    border-bottom: 2px solid transparent;
     background: #fff;
     outline: none;
-    -webkit-transition: 0.1s;
-    transition: 0.1s;
+    -webkit-transition: 0.3s;
+    transition: 0.3s;
     cursor: pointer; }
 
 .tabs__active {
@@ -1218,7 +1238,9 @@ body {
       font-family: inherit;
       border: none;
       border-radius: 3px;
-      background: #fac93e; }
+      background: #fac93e;
+      -webkit-transition: 0.3s;
+      transition: 0.3s; }
       .form form button::after {
         content: 'Trading involves risk of loss';
         position: absolute;
@@ -1227,6 +1249,10 @@ body {
         width: 100%;
         color: #fac93e;
         font-size: 10px; }
+      .form form button:hover {
+        -webkit-box-shadow: 0px 3px 7px 0px rgba(174, 165, 255, 0.35);
+        box-shadow: 0px 3px 7px 0px rgba(174, 165, 255, 0.35);
+        background: #ffd800; }
 
 @media screen and (max-width: 768px) {
   .form {
@@ -1383,15 +1409,25 @@ body {
 
 .footer__link {
   width: 25px;
-  height: 25px; }
+  height: 25px;
+  -webkit-transition: 0.3s linear;
+  transition: 0.3s linear; }
   .footer__link--fb {
     background: url("../img/footer-fb.svg") no-repeat top; }
+    .footer__link--fb:hover {
+      background: url("../img/footer-fb-h.svg") no-repeat top; }
   .footer__link--li {
     background: url("../img/footer-li.svg") no-repeat top; }
+    .footer__link--li:hover {
+      background: url("../img/footer-li-h.svg") no-repeat top; }
   .footer__link--gp {
     background: url("../img/footer-gp.svg") no-repeat top; }
+    .footer__link--gp:hover {
+      background: url("../img/footer-gp-h.svg") no-repeat top; }
   .footer__link--tw {
     background: url("../img/footer-tw.svg") no-repeat top; }
+    .footer__link--tw:hover {
+      background: url("../img/footer-tw-h.svg") no-repeat top; }
 
 @media screen and (max-width: 768px) {
   .footer__flex {
@@ -1700,17 +1736,13 @@ body {
       -webkit-box-shadow: 0px 3px 7px 0px rgba(174, 165, 255, 0.35);
       box-shadow: 0px 3px 7px 0px rgba(174, 165, 255, 0.35); }
       .contact__form input:focus::-webkit-input-placeholder {
-        color: #2f2861;
-        font-weight: 500; }
+        color: #2f2861; }
       .contact__form input:focus:-ms-input-placeholder {
-        color: #2f2861;
-        font-weight: 500; }
+        color: #2f2861; }
       .contact__form input:focus::-ms-input-placeholder {
-        color: #2f2861;
-        font-weight: 500; }
+        color: #2f2861; }
       .contact__form input:focus::placeholder {
-        color: #2f2861;
-        font-weight: 500; }
+        color: #2f2861; }
   .contact__form textarea {
     height: 140px;
     margin: 0 0 15px 0;
@@ -1734,17 +1766,13 @@ body {
       -webkit-box-shadow: 0px 3px 7px 0px rgba(174, 165, 255, 0.35);
       box-shadow: 0px 3px 7px 0px rgba(174, 165, 255, 0.35); }
       .contact__form textarea:focus::-webkit-input-placeholder {
-        color: #2f2861;
-        font-weight: 500; }
+        color: #2f2861; }
       .contact__form textarea:focus:-ms-input-placeholder {
-        color: #2f2861;
-        font-weight: 500; }
+        color: #2f2861; }
       .contact__form textarea:focus::-ms-input-placeholder {
-        color: #2f2861;
-        font-weight: 500; }
+        color: #2f2861; }
       .contact__form textarea:focus::placeholder {
-        color: #2f2861;
-        font-weight: 500; }
+        color: #2f2861; }
   .contact__form button {
     height: 40px;
     color: #2f2861;
@@ -1757,7 +1785,6 @@ body {
     -webkit-transition: 0.3s;
     transition: 0.3s; }
     .contact__form button:hover {
-      font-weight: 500;
       -webkit-box-shadow: 0px 3px 7px 0px rgba(174, 165, 255, 0.35);
       box-shadow: 0px 3px 7px 0px rgba(174, 165, 255, 0.35);
       background: #ffd800; }
@@ -2187,7 +2214,7 @@ body {
 
 @media screen and (max-width: 1200px) {
   .inner {
-    padding: 200px 0 0 0; }
+    padding: 200px 0 70px 0; }
   .inner__text {
     padding: 0 15px; }
   .inner__img {
@@ -2222,12 +2249,14 @@ body {
     background-size: 300px;
     background-position-y: 0; }
   .inner__icon {
-    width: 250px;
-    height: 250px; }
+    width: 200px;
+    height: 200px;
+    margin: 30px auto; }
   .inner__text--mobile {
     width: auto; }
   .inner__text--cysec {
-    padding: 20px 15px; }
+    padding: 20px 15px;
+    border: none; }
     .inner__text--cysec h2 {
       margin: 0 0 30px 0;
       font-size: 30px; }
