--- a/forexglobal/sass/blocks/main/form.scss
+++ b/forexglobal/sass/blocks/main/form.scss
@@ -85,6 +85,7 @@
       border: none;
       border-radius: 3px;
       background: $mc;
+      transition: 0.3s;
       
       &::after {
         content: 'Trading involves risk of loss';
@@ -94,6 +95,11 @@
         width: 100%;
         color: $mc;
         font-size: 10px;
+      }
+      
+      &:hover {
+        box-shadow: 0px 3px 7px 0px rgba(174, 165, 255, 0.35);
+        background: #ffd800;
       }
     }
   }
