--- a/forexglobal/sass/blocks/main/title.scss
+++ b/forexglobal/sass/blocks/main/title.scss
@@ -58,6 +58,7 @@
     border: none;
     border-radius: 3px;
     background: $mc;
+    transition: 0.3s linear;
     
     &::after {
       content: 'Trading involves risk of loss';
@@ -67,6 +68,11 @@
       width: inherit;
       color: $mc;
       font-size: 10px;
+    }
+    
+    &:hover {
+      box-shadow: 0px 3px 7px 0px rgba(174, 165, 255, 0.35);
+      background: #ffd800;
     }
   }
 }
