--- a/forexglobal/sass/blocks/main/welcome.scss
+++ b/forexglobal/sass/blocks/main/welcome.scss
@@ -43,6 +43,7 @@
   text-decoration: none;
   border-radius: 3px;
   background: $mc;
+  transition: 0.3s;
   
   &::after {
     content: 'Trading involves risk of loss';
@@ -52,6 +53,11 @@
     width: inherit;
     color: $sc;
     font-size: 10px;
+  }
+  
+  &:hover {
+    // box-shadow: 0px 3px 7px 0px rgba(174, 165, 255, 0.35);
+    background: #ffd800;
   }
 }
 
