--- a/forexglobal/css/style.css
+++ b/forexglobal/css/style.css
@@ -567,7 +567,7 @@ body {
   left: 0;
   width: 100%;
   border-top: 2px solid #2f2861;
-  background: rgba(47, 40, 97, 0.9);
+  background: rgba(47, 40, 97, 0.8);
   -webkit-transition: 0.5s;
   transition: 0.5s; }
   .nav__wrapper--closed {
@@ -2416,3 +2416,18 @@ body {
     font-size: 10px; }
   .table__logo {
     background-size: 40px; } }
+
+.zulu__wrapper {
+  position: relative; }
+
+.zulu__video {
+  width: 100%;
+  height: 700px;
+  cursor: pointer;
+  -o-object-fit: fill;
+  object-fit: fill; }
+
+.zulu__control {
+  width: 80px;
+  height: 80px;
+  background: #000; }
