--- a/forexglobal/sass/blocks/inner/zulu.scss
+++ b/forexglobal/sass/blocks/inner/zulu.scss
@@ -14,7 +14,94 @@
 }
 
 .zulu__control {
+  position: absolute;
+  top: 50%;
+  left: 50%;
   width: 80px;
   height: 80px;
-  background: #000;
+  border: none;
+  background: transparent url('../img/zulutrade-play.svg') no-repeat center;
+  transition: 0.5s;
+  transform: translate(-50%, -50%);
+  outline: none;
+}
+
+.zulu__start {
+  display: block;
+  width: 270px;
+  margin: 50px auto 0;
+  padding: 10px 0;
+  color: $sc;
+  font-size: 18px;
+  font-weight: 300;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 3px;
+  background: $mc;
+  transition: 0.3s;
+  
+  &:hover {
+    box-shadow: 0px 3px 7px 0px rgba(174, 165, 255, 0.35);
+    background: #ffd800;
+  }
+}
+
+.zulu__flex {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.zulu__mockup {
+  width: 508px;
+  height: 502px;
+  background: url('../img/zulutrade-mockup.png') no-repeat center;
+}
+
+.zulu__list {
+  margin: 0;
+  padding: 0;
+  
+  li {
+    color: $sc;
+    font-size: 18px;
+    font-weight: 300;
+    line-height: 40px;
+    list-style-position: inside;
+    list-style-image: url('../img/webtrader-li.svg');
+    
+    &:first-child {
+      margin: 0 0 30px 0;
+      text-transform: uppercase;
+      list-style: none;
+    }
+  }
+  
+  &--second {
+    
+    li {
+      
+      &:first-child {
+        margin: 0;
+        text-transform: none;
+        list-style: url('../img/webtrader-li.svg');
+        list-style-position: inside;
+      }
+    }
+  }
+}
+
+.zulu__name {
+  margin: 0 0 35px 0;
+  color: $sc;
+  font-size: 40px;
+  font-weight: 500;
+  text-align: center;
+}
+
+.zulu__left {
+  width: 570px;
+  color: $sc;
+  font-size: 16px;
+  font-weight: 300;
 }
