--- a/forexglobal/css/style.css
+++ b/forexglobal/css/style.css
@@ -2219,6 +2219,8 @@ body {
 @media screen and (max-width: 1200px) {
   .inner {
     padding: 200px 0 70px 0; }
+    .inner--zulu {
+      padding: 50px 0 70px 0; }
   .inner__text {
     padding: 0 15px; }
   .inner__img {
@@ -2246,6 +2248,11 @@ body {
 @media screen and (max-width: 768px) {
   .inner {
     padding: 100px 0 50px 0; }
+    .inner--zulu {
+      padding: 50px 0; }
+      .inner--zulu .tab__table {
+        display: block;
+        overflow-x: scroll; }
   .inner__name {
     margin: 0 0 20px 0;
     font-size: 40px; }
@@ -2512,3 +2519,89 @@ body {
   color: #2f2861;
   font-size: 16px;
   font-weight: 300; }
+  .zulu__left a {
+    color: #6420ff;
+    text-decoration: none; }
+
+.zulu__accordion {
+  background-color: #fac93e;
+  color: #2f2861;
+  cursor: pointer;
+  margin: 0 0 10px 0;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  border-radius: 3px;
+  text-align: left;
+  outline: none;
+  font-size: 18px;
+  font-weight: 300;
+  font-family: inherit;
+  -webkit-transition: 0.4s;
+  transition: 0.4s; }
+  .zulu__accordion:after {
+    content: '\002B';
+    color: #2f2861;
+    font-weight: bold;
+    float: right;
+    margin-left: 5px;
+    -webkit-transition: 0.3s;
+    transition: 0.3s; }
+
+.active {
+  color: #fac93e;
+  background-color: #2f2861; }
+
+.active:after {
+  content: "\2212";
+  color: #fac93e; }
+
+.zulu__content {
+  padding: 0 18px;
+  background-color: white;
+  max-height: 0;
+  overflow: hidden;
+  -webkit-transition: max-height 0.2s ease-out;
+  transition: max-height 0.2s ease-out; }
+  .zulu__content p {
+    font-weight: 300; }
+
+.zulu__right {
+  width: 505px;
+  height: 390px;
+  background: url("../img/zulutrade-guard.png") no-repeat center;
+  background-size: cover; }
+
+@media screen and (max-width: 768px) {
+  .zulu__video {
+    height: auto;
+    margin: 72px 0 0 0; }
+  .zulu__control {
+    width: 50px;
+    height: 50px; }
+  .zulu__flex {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column; }
+  .zulu__mockup {
+    width: 300px;
+    height: 300px;
+    background-size: 300px; }
+  .zulu__list {
+    margin: 20px 0 0 0; }
+    .zulu__list li:first-child {
+      margin: 0; }
+  .zulu__left {
+    width: auto;
+    margin: 0 0 20px 0;
+    padding: 0 15px; }
+    .zulu__left a {
+      display: block;
+      text-align: center; }
+  .zulu__iframe {
+    width: 300px; }
+  .zulu__right {
+    width: 300px;
+    height: 300px;
+    background-size: 300px; } }
