--- a/forexglobal/css/style.css
+++ b/forexglobal/css/style.css
@@ -1925,6 +1925,9 @@ body {
       margin: 10px 0 20px 0; }
   .inner__text--legal {
     text-align: center; }
+  .inner__text--platforms {
+    margin: 0 0 60px 0;
+    text-align: center; }
 
 .inner__img {
   margin: 70px 0 0 0;
@@ -1966,6 +1969,10 @@ body {
   .inner__flex--types {
     margin: 70px 0; }
   .inner__flex--mobile {
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center; }
+  .inner__flex--platforms {
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center; }
@@ -2216,6 +2223,79 @@ body {
     font-size: 16px;
     font-weight: 300; }
 
+.inner__mockup--web {
+  width: 600px;
+  height: 330px;
+  background: url("../img/tabs-mockup.png") no-repeat center;
+  background-size: cover; }
+
+.inner__mockup--mob {
+  width: 600px;
+  height: 400px;
+  background: url("../img/mobile-mockup-1.png") no-repeat center;
+  background-size: cover; }
+
+.inner__mockup--des {
+  width: 570px;
+  height: 385px;
+  background: url("../img/desktop-mockup.png") no-repeat center;
+  background-size: cover; }
+
+.inner__mockup--zulu {
+  width: 461px;
+  height: 455px;
+  background: url("../img/zulutrade-mockup.png") no-repeat center;
+  background-size: cover; }
+
+.inner__desc {
+  width: 570px; }
+  .inner__desc b {
+    color: #2f2861;
+    font-size: 30px;
+    font-weight: 500; }
+  .inner__desc hr {
+    width: 70px;
+    margin: 20px 0;
+    border: none;
+    background: #fac93e; }
+  .inner__desc p {
+    margin: 0 0 40px 0;
+    color: #2f2861;
+    font-size: 18px;
+    font-weight: 300; }
+
+.inner__button {
+  display: inline-block;
+  width: 170px;
+  padding: 10px 0;
+  color: #2f2861;
+  font-size: 18px;
+  font-weight: 300;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 3px;
+  -webkit-transition: 0.3s;
+  transition: 0.3s; }
+  .inner__button--start {
+    position: relative;
+    margin: 0 30px 0 0;
+    background: #fac93e; }
+    .inner__button--start:hover {
+      -webkit-box-shadow: 0px 3px 7px 0px rgba(174, 165, 255, 0.35);
+      box-shadow: 0px 3px 7px 0px rgba(174, 165, 255, 0.35);
+      background: #ffd800; }
+    .inner__button--start:after {
+      content: 'Trading involves risk of loss';
+      position: absolute;
+      width: inherit;
+      left: 0;
+      bottom: -15px;
+      font-size: 10px; }
+  .inner__button--more {
+    width: 168px;
+    padding: 9px 0;
+    border: 1px solid #2f2861; }
+
 @media screen and (max-width: 1200px) {
   .inner {
     padding: 200px 0 70px 0; }
@@ -2296,6 +2376,19 @@ body {
       -ms-flex-direction: column;
       flex-direction: column;
       margin: 70px 0 40px 0; }
+    .inner__flex--platforms {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column; }
+    .inner__flex--mobile .inner__mockup {
+      -webkit-box-ordinal-group: 2;
+      -ms-flex-order: 1;
+      order: 1; }
+    .inner__flex--mobile .inner__desc {
+      -webkit-box-ordinal-group: 3;
+      -ms-flex-order: 2;
+      order: 2; }
     .inner__flex:first-child {
       padding: 220px 0 0 0; }
   .inner__mockup {
@@ -2325,7 +2418,20 @@ body {
     .inner__content details summary {
       padding: 0 15px 0 0; }
     .inner__content p {
-      margin: 16px 0 0 0; } }
+      margin: 16px 0 0 0; }
+  .inner__desc {
+    width: auto;
+    padding: 0 15px; }
+    .inner__desc b {
+      display: block;
+      text-align: center; }
+    .inner__desc hr {
+      margin: 20px auto; }
+  .inner__button {
+    display: block;
+    margin: auto; }
+    .inner__button--start {
+      margin: 0 auto 30px; } }
 
 .table {
   width: 100%;
