--- a/forexglobal/sass/blocks/main/header.scss
+++ b/forexglobal/sass/blocks/main/header.scss
@@ -268,6 +268,13 @@
         }
       }
       
+      .nav__sub {
+        
+        a {
+          padding: 0 0 26px 0;
+        }
+      }
+      
       .nav__wrapper {
         
         &--opened {
