--- a/forexglobal/sass/blocks/main/nav.scss
+++ b/forexglobal/sass/blocks/main/nav.scss
@@ -48,37 +48,18 @@
       transition: 0.2s;
     }
     
-    &:hover::after {
-      transform: rotate(180deg);
+    &:hover {
+      color: #ffd800;
     }
-    
-    &:hover + .nav__wrapper {
-      animation-name: sub-open;
-      animation-duration: 0.5s;
-      animation-fill-mode: forwards;
-      animation-direction: alternate;
-    }
-  }
-}
-
-@keyframes sub-open {
-  0% {
-    
-  }
-  
-  100% {
-    opacity: 1;
-    clip: auto;
   }
 }
 
 .nav__wrapper {
   position: absolute;
-  // display: none;
-  // top: 160px;
   left: 0;
   width: 100%;
   border-top: 2px solid $sc;
+  border-bottom: 2px solid $sc;
   background: rgba(47, 40, 97, 0.8);
   transition: 0.5s;
   
@@ -93,15 +74,12 @@
 
 .nav__sub {
   display: flex;
-  justify-content: space-between;
+  // justify-content: space-between;
   align-items: center;
   width: 1140px;
   margin: 0 auto;
-  padding: 30px 15px;
-  // padding: 20px 0 0 0;
+  padding: 27px 15px;
   list-style: none;
-  // opacity: 0;
-  // clip: rect(0, 0, 0, 0);
   
   b {
     color: $mc;
@@ -109,22 +87,20 @@
     font-weight: 500;
   }
   
+  li {
+    margin: 0 30px 0 0;
+    
+    &:last-child {
+      margin: 0;
+    }
+  }
+  
   a {
     font-size: 16px;
-    transition: 0.3s;
-    
-    &:hover {
-      color: #ffa100;
-    }
     
     &::after {
       display: none;
     }
-  }
-  
-  &:hover {
-    opacity: 1;
-    clip: auto;
   }
 }
 
@@ -133,7 +109,15 @@
   
   &--active {
     border-bottom: 1px solid $mc;
+    
+    &::after {
+      transform: rotate(180deg);
+    }
   }
+}
+
+.nav__active {
+  border-bottom: 1px solid $mc;
 }
 
 .nav__search {
