--- a/forexglobal/sass/blocks/main/header.scss
+++ b/forexglobal/sass/blocks/main/header.scss
@@ -406,6 +406,13 @@
         }
       }
       
+      .nav__list {
+        
+        a {
+          padding: 0 0 3px 0;
+        }
+      }
+      
       .header__language {
         height: 36px;
         font-size: 14px;
